--- a/snap-handlers.cabal
+++ b/snap-handlers.cabal
@@ -20,6 +20,7 @@ library
     Snap.Handlers,
     Snap.Handlers.Digestive,
     Snap.Handlers.Errors,
+    Snap.Handlers.Headers,
     Snap.Handlers.Param
 
   -- other-modules:
@@ -37,7 +38,9 @@ library
     aeson,
     digestive-functors-aeson,
     MonadCatchIO-transformers,
-    safe
+    safe,
+    time,
+    transformers
 
   -- hs-source-dirs:
   default-language:    Haskell2010
