Added renderWithDigestiveSplices shortcut handler (though with a name like that, it doesn't seem like much of a shortcut)

--- a/snap-handlers.cabal
+++ b/snap-handlers.cabal
@@ -34,6 +34,7 @@ library
     snap-extras,
     heist,
     digestive-functors-snap,
+    digestive-functors-heist,
     digestive-functors,
     aeson,
     digestive-functors-aeson,
