Added support for Snap 1.0

--- a/snap-handlers.cabal
+++ b/snap-handlers.cabal
@@ -39,6 +39,7 @@ library
     aeson,
     digestive-functors-aeson,
     MonadCatchIO-transformers,
+    lifted-base,
     safe,
     time,
     transformers
