--- a/snap-handlers.cabal
+++ b/snap-handlers.cabal
@@ -46,3 +46,8 @@ library
 
   -- hs-source-dirs:
   default-language:    Haskell2010
+
+  ghc-options:
+    -fno-warn-orphans
+    -fno-warn-unused-do-bind
+    -fno-warn-tabs
