--- a/snap-handlers.cabal
+++ b/snap-handlers.cabal
@@ -31,7 +31,7 @@ library
     text,
     snap,
     snap-core,
-    snap-extras,
+    snap-extras > 0.6,
     heist,
     digestive-functors-snap,
     digestive-functors-heist,
